[package]
name = "rays"
version = "0.1.0"
authors = ["Michael Nye <thenyeguy@gmail.com>"]
edition = "2018"

[features]
profile = ["cpuprofiler"]
statistics = []

[dependencies]
console = "0.14.0"
cpuprofiler = { version = "0.0.4", optional = true }
image = "0.23.12"
indicatif = "0.15.0"
palette = "0.5.0"
rand = { version = "0.8.0", features = ["small_rng"] }
rayon = "1.5.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = "0.8.14"
structopt = "0.3"
tobj = "2.0.3"
