[package]
name = "rays"
version = "0.1.0"
authors = ["Michael Nye <thenyeguy@gmail.com>"]
edition = "2021"

[features]
profile = ["cpuprofiler"]
statistics = []

[dependencies]
console = "0.15.0"
cpuprofiler = { version = "0.0.4", optional = true }
image = "0.24.0"
indicatif = "0.16.2"
palette = "0.6.0"
rand = { version = "0.8.0", features = ["small_rng"] }
rayon = "1.5.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = "0.8.14"
structopt = "0.3"
tobj = "3.2.0"
