[package]
name = "rays"
version = "0.1.0"
authors = ["Michael Nye <thenyeguy@gmail.com>"]
edition = "2021"

[features]
profile = ["cpuprofiler"]
statistics = []

[dependencies]
console = "0.15.7"
cpuprofiler = { version = "0.0.4", optional = true }
image = "0.24.6"
indicatif = "0.17.5"
palette = "0.7.2"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.7.0"
serde = { version = "1.0.173", features = ["derive"] }
serde_yaml = "0.9.25"
structopt = "0.3"
thiserror = "1.0"
tobj = "4.0.0"
